2009-02-28  Hans Boehm <Hans.Boehm@hp.com> (With input from Ivan Maidansky)
	* win32_threads.c (GC_push_stack_for): Yet another attempt
	at the stack_min finding logic.  Try to clean up the existing code
	while minimizing VirtualQuery calls.
	(GC_win32_start_inner): Register thread before GC_printf.
	Produce more output with DEBUG_THREADS.
	*include/gc.h: Update obsolete comments.

2009-02-24  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidansky)
	* tests/test.c:
	(gcj_class_struct2): Use cast instead of l suffix.
	Cast GetLastError to int in various places.
	Avoid unused result warning from incr/decr macros.
	Add cast for fake_gcj_mark_proc.
	Cast GC_gc_no to unsigned in printf.

2009-02-24  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidansky)
	* include/gc.h: Fix two typos in comments.

2009-02-24  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidansky)
	* finalize.c: Fix typo in comment.

2008-12-03  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidansky)
	* blacklst.c (GC_print_source_pointer): Don't call GC_print_heap_obj
	with lock.

2008-12-01  Hans Boehm <Hans.Boehm@hp.com>
	* reclaim.c: (GC_reclaim_block): Scan even nearly full blocks
	if we are checking for leaks.

2008-11-12  Hans Boehm <Hans.Boehm@hp.com> (Really mostly Ivan Maidansky)
	* win32_threads.c: Remove mark lock spinning.
	* win32_threads.c, pthread_support.c: Update GC_unlocked_count,
	GC_spin_count, and GC_block_count using atomic operations.
	* tests/test.c: Declare n_tests as AO_t only if we have threads.

2008-11-11  Hans Boehm <Hans.Boehm@hp.com>
	(Really almost entirely Ivan Maidansky)
	* win32_threads.c: Support PARALLEL_MARK.  Make printf arg
	types agree with format specifiers.  Add missing copyright header.
	Add STATIC for GC_threads.
	* include/private/gcconfig.h: Add FIXME comment.
	* tests/test.c (run_ine_test): Replace LOCK/UNLOCK use with
	AO_fetch_and_add1_full.  Declare n_tests as AO_t.
	(WinMain): Dont call GC_use_DllMain.
	with PARALLEL_MARK or THREAD_LOCAL_ALLOC.
