@@ -1,3 +1,14 @@
+2009-02-28  Hans Boehm <Hans.Boehm@hp.com> (Mostly Ivan Maidansky)
+	* allchblk.c, backgraph.c, dbg_mlc.c, dyn_load.c,
+	finalize.c, include/private/gc_pmark.h, malloc.c, mark.c,
+	os_dep.c, pthread_stop_world.c, pthread_support.c, reclaim.c,
+	thread_local_alloc.c.
+	* misc.s: Refine comment.
+
+2009-02-28  Hans Boehm <Hans.Boehm@hp.com>
+	* os_dep.c: Define GC_GWW_BUF_LEN more intelligently.  Add FIXME
+	comment.
+
 2009-02-28  Hans Boehm <Hans.Boehm@hp.com> (With input from Ivan Maidansky)
 	* win32_threads.c (GC_push_stack_for): Yet another attempt
 	at the stack_min finding logic.  Try to clean up the existing code
